code review + minor changes